--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "supertest": "^6.3.1"
   },
   "scripts": {
-    "build": "react-scripts build",
-    "start": "cd ./backend && npm install && npm run build && node ./build/src/index.js && cd ../frontend && npm install --only=dev && npm install && npm run build && react-scripts start"
+    "start": "cd ./backend && npm install --only=dev && npm install && npm run build && node ./build/src/index.js && cd ../frontend && npm install --only=dev && npm install && npm run build && react-scripts start"
   }
 }
