exclude tests directory from backend build

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,5 +8,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true
-  }
+  },
+  "exclude": [
+    "tests"
+  ]
 }
