--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "supertest": "^6.3.1"
   },
   "scripts": {
-    "start": "cd ./backend && npm install --only=dev && npm install && npm run build && node ./build/index.js && cd ../frontend && npm install --only=dev && npm install && npm run build && react-scripts start"
+    "start": "cd ./frontend && npm install react-scripts && npm install --production && npm run build && cd ../backend && npm install --production && npm run build && node ./build/index.js"
   }
 }
