--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "supertest": "^6.3.1"
   },
   "scripts": {
-    "build": "cd ./frontend && npm install --only=dev && npm install @mui/lab && npm install && npm run build && cd ../backend && npm install --production && npm run build",
+    "build": "cd ./frontend && npm install --only=dev && npm install && npm run build && cd ../backend && npm install --production && npm run build",
     "start": "node ./backend/build/index.js"
   }
 }
